# thingdb

./: Cargo.toml  README.md
examples/: benchmark.rs  benchmark_relations.rs  blueprint.rs  debug_query.rs  entity.rs  graph_notes.rs
src/: archetype.rs  attribute.rs  blueprint.rs  edge.rs  entity.rs  lib.rs  query.rs  storage.rs  thing.rs  tx.rs  world.rs
tests/: full_test_suite.rs  integration_test.rs
thingdb-derive/: Cargo.toml
thingdb-derive/src/: lib.rs
