[package]
name = "thingdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
thiserror = "*"
tokio = { version = "*", features = ["full"] }

# Backend storage
rust-rocksdb = { version = "0.50.0", features = ["jemalloc"] }

# Serialization
postcard = { version = "1.1.3", features = ["alloc"] }

thingdb-derive = { path = "thingdb-derive" }
