[package]
name = "thingdb"
version = "0.1.0"
edition = "2021"

[dependencies]
thingdb-derive = { path = "thingdb-derive" }
thiserror = { version = "2.0.18" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }

# Backend storage
fjall = "3.1.5"

# Serialization
postcard = { version = "1.1.3", features = ["alloc"] }
